# incolume.py.githooks

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pytest.ini  CHANGELOG.md  README.md  main.py  pyproject.toml  ruff.toml
assets/raw/: GitHooks.af  incolume-py-githooks.xcf
examples/: cli_command.py  prepare-commit-msg.sh  script_01.py  script_02.py  script_03.py  script_03.sh
incolume/py/git_hooks/: commit_msg.py  pre-commit.py  pre_commit.py  prepare_commit_msg.py  valid_filename.py
incolume/py/githooks/: CLI.py  __init__.py  cli.py  cli_command.py  commit_msg.py  detect_private_key.py  effort.py  effort_message.py  effort_msg.py  footer_signedoffby.py  gitdiff.py  pre_commit.py  pre_commit_installed.py  pre_commit_running.py  prepare_commit_msg.py  rules.py  trailers_hook.py  valid_filename.py  validate_branchname.py  validate_examples.py  validate_filename.py  version.txt
incolume/py/githooks/core/: __init__.py  decorators.py  rules.py
incolume/py/githooks/utils/: __init__.py  decorators.py
tests/: __init__.py  cli_test.py  commit_msg_test.py  conftest.py  detect_private_key_test.py  effort_message_test.py  effort_test.py  footer_signedoffby_test.py  gitdiff_test.py  package_test.py  pre_commit_installed_test.py  prepare_commit_msg_test.py  rules_test.py  setup_teardown_test.py  utils_test.py  valid_filename_test.py  validate_branchname_test.py  version_test.py
tests/incolume/py/githooks/: cli_test.py  commit_msg_test.py  detect_private_key_test.py  effort_message_test.py  footer_signedoffby_test.py  gitdiff_test.py  prepare_commit_msg_test.py  rules_test.py  valid_filename_test.py  validate_branchname_test.py  validate_filename_test.py
tests/incolume/py/githooks/core/: core_test.py  decorators_test.py  rules_test.py  utils_test.py
tests/incolume/py/githooks/utils/: decorators_test.py  utils_test.py
