[project]
name = "incolume-py-git-hooks"
version = "0.2.0a1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <4"

authors = [
  {name="britodfbr", email =  "contato@incolume.com.br"}
]

maintainers = [
  {name="britodfbr", email =  "contato@incolume.com.br"}
]

classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Operating System :: OS Independent',
  'Natural Language :: Portuguese (Brazilian)',
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
#  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Utilities',
]

dependencies = [
    "click>=8.2.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.13.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.18.2",
]

[project.scripts]
detect-key = "incolume.py.git_hooks.detect_private_key:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
