[project]
name = "incolume-py-githooks"
version = "1.2.0"
description = "Hooks git for incolume projects"
readme = "README.md"
requires-python = ">=3.10, <4"

authors = [
  {name="britodfbr", email =  "contato@incolume.com.br"}
]

maintainers = [
  {name="britodfbr", email =  "contato@incolume.com.br"}
]

classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Operating System :: OS Independent',
  'Natural Language :: Portuguese (Brazilian)',
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
#  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Utilities',
]

dependencies = [
    "click>=8.2.1",
    "colorama>=0.4.6",
    "icecream>=2.1.7",
    "rich[jupyter]>=14.1.0",
    "tomli>=2.2.1 ; python_full_version < '3.11'",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "incolume-py-changelog>=0.17.0",
    "ipykernel>=6.30.1",
    "jupyter[lab]>=1.1.1",
    "nbformat>=5.10.4",
    "pre-commit>=4.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.13.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.18.2",
]

[project.scripts]
clean-commit-msg = "incolume.py.githooks.cli:clean_commit_msg_cli"
detect-key = "incolume.py.githooks.cli:detect_private_key_cli"
effort-msg = "incolume.py.githooks.cli:effort_msg_cli"
is-precommit-installed = "incolume.py.githooks.cli:pre_commit_installed_cli"
is-valid-filename = "incolume.py.githooks.cli:check_valid_filenames_cli"
is-valid-msg-commit = "incolume.py.githooks.cli:prepare_commit_msg_cli"
set-footer-signed-off-by = "incolume.py.githooks.cli:footer_signeoffby_cli"


[tool.uv]

[tool.uv.build-backend]
module-root = ""
module-name = "incolume.py.githooks"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
